namespace Domain.Factory;

using Domain.Model;

public interface IDockFactory
{
  //  Dock newDock(...);
}